# PointnClick-Segmentation

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_cli.py
data/feedback_vast/: manifest.jsonl
data/prepared/: manifest.json  summary.json
examples/: dataset_layout.md  vast_workflow.md
exports/: README.md
outputs/vast_import/: Bouton 1 Export_s20_vast_import.json
runs/baseline/: config.json  metrics.json
runs/baseline_512/: config.json  metrics.json
runs/smoke_test/: config.json
runs/test_run/: config.json  metrics.json
src/pointnclick_segmentation/: analysis.py  cli.py  config.py  feedback.py  infer.py  metrics.py  prepare_exports.py  prepare_worm.py  train.py  utils.py  vast.py  vast_client.py  vast_live.py
src/pointnclick_segmentation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pointnclick_segmentation/data/: __init__.py  dataset.py
src/pointnclick_segmentation/model/: __init__.py  unet_click.py
